--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ a {
 
 /* INDEX*/
 .hero {
-  background-image: url("/img/hero.avif");
+  background-image: url(/img/hero.avif); 
   display: flex;
   align-items: center;
   background-attachment: fixed;
@@ -282,7 +282,7 @@ a {
   margin: auto;
   padding: 1em; }
   .container_form .company-info {
-    background-image: url("/img/nuez_tukura.avif"); }
+    background-image: url(/img/nuez_tukura.avif); }
   .container_form .contact {
     background: #F9FEFF;
     padding-top: 10px;
