--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,46 @@ aside {
   width: 100%;
 }
 
+.boton-menu.active {
+  background-color: var(--clr-white);
+  color: var(black);
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  position: relative;
+}
+
+.boton-menu.active::before {
+  content: '';
+  position: absolute;
+  width: 1rem;
+  height: 2rem;
+  bottom: 100%;
+  right: 0;
+  background-color: transparent;
+  border-bottom-right-radius: .5rem;
+  box-shadow: 0 1rem 0 var(black);
+}
+
+.boton-menu.active::after {
+  content: '';
+  position: absolute;
+  width: 1rem;
+  height: 2rem;
+  top: 100%;
+  right: 0;
+  background-color: transparent;
+  border-top-right-radius: .5rem;
+  box-shadow: 0 -1rem 0 var(black);
+}
+
+.bi-list{
+  color:black;
+}
+
+.boton-menu > i.bi-hand-index-thumb-fill,
+.boton-menu > i.bi-hand-index-thumb {
+  transform: rotateZ(90deg);
+}
 
 .boton-carrito {
   margin-top: 2rem;
@@ -425,3 +465,7 @@ main {
 
 
 
+
+.open-menu{
+  color: #961818;
+} 
